force-app/main/default/objects/synety__Synety_Contact_Ids__c/synety__Synety_Contact_Ids__c.object-meta.xml
<CustomObject>
    <label>CloudCall Contact Ids</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudCall Contact Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>