force-app/main/default/objects/synety__Synety_Contact_Ids__c/fields/synety__Object_Record_Id_Unique__c.field-meta.xml
<CustomField>
    <fullName>synety__Object_Record_Id_Unique__c</fullName>
    <externalId>true</externalId>
    <label>Object Record Id Unique</label>
    <length>20</length>
    <type>Text</type>
</CustomField>