force-app/main/default/objects/synety__Synety_Contact_Ids__c/fields/synety__Synety_Id__c.field-meta.xml
<CustomField>
    <fullName>synety__Synety_Id__c</fullName>
    <label>CloudCall Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>