force-app/main/default/objects/synety__Synety_Contact_Ids__c/listViews/synety__All1.listView-meta.xml
<ListView>
    <fullName>synety__All1</fullName>
    <columns>NAME</columns>
    <columns>synety__Synety_Id__c</columns>
    <columns>synety__Object_Name__c</columns>
    <columns>synety__Object_Record_Id_Unique__c</columns>
    <columns>synety__Object_Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>